AC_INIT([SystemK order book], [0.0.0], [systemk@capitalkpartners.com],
                    [order_book], [http://www.capitalkpartners.com/])
AC_PREREQ([2.59])
LT_INIT([disable-shared])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_SUBDIRS([order_book])
AC_CONFIG_SUBDIRS([market_data/collect-fix])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
